[package]
name = "riakv"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
byteorder = "1.2"
crc = "1.7"
serde = "1"
serde_derive = "1"
serde_json = "1"

[lib]
name = "libriakv"
path = "src/lib.rs"

[[bin]]
name = "riakv_mem"
path = "src/riakv_mem.rs"

[[bin]]
name = "riakv_disk"
path = "src/riakv_disk.rs"